[package]
name = "trust0-client"
version = "1.0.3"
description = "Trust0 SDP Service Proxy Client"
repository = "https://github.com/chewyfish/trust0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = [ "derive", "env" ] }
ctrlc = "3.5.1"
derive_builder = "0.20.2"
dotenvy = "0.15.7"
futures = "0.3.31"
log = "0.4.28"
log4rs = "1.4.0"
once_cell = "1.21.3"
pki-types = { package = "rustls-pki-types", version = "1.0.1", features = ["std"] }
rcgen = { version = "0.11.3", features = ["pem"], default-features = false }
ring = "0.17.7"
rpassword = "7.4.0"
rustls = { version = "0.22.1", features = [ "logging" ] }
rustls-pemfile = "2.0.0"
sct = "0.7.1"
serde = { version = "*", features = ["derive"] }
serde_derive = "*"
serde_json = { version = "*", features = ["arbitrary_precision"] }
trust0-common = { version = "1.0.3", path = "../common" }
webpki-roots = "0.25"

[dev-dependencies]
base64 = "0.22.1"
mockall = { version = "0.14.0" }
regex = "1.12.2"
scram = "0.6.0"
