[package]
name = "trust0-client"
version = "2.0.0"
description = "Trust0 SDP Service Proxy Client"
repository = "https://github.com/chewyfish/trust0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = [ "derive", "env" ] }
ctrlc = "3.5.2"
derive_builder = "0.20.2"
dotenvy = "0.15.7"
futures = "0.3.32"
log = "0.4.29"
log4rs = "1.4.0"
once_cell = "1.21.4"
pki-types = { package = "rustls-pki-types", version = "1.14.1", features = ["std"] }
rcgen = { version = "0.14.7", features = ["pem"], default-features = false }
ring = "0.17.14"
rpassword = "7.4.0"
rustls = { version = "0.23.39", features = ["logging", "std", "tls12", "ring"], default-features = false }
sct = "0.7.1"
serde = { version = "*", features = ["derive"] }
serde_derive = "*"
serde_json = { version = "*", features = ["arbitrary_precision"] }
trust0-common = { version = "2.0.0", path = "../common" }
webpki-roots = "1.0.7"

[dev-dependencies]
base64 = "0.22.1"
mockall = { version = "0.14.0" }
regex = "1.12.3"
scram = "0.6.0"
