[package]
name = "trust0-gateway"
version = "1.0.1"
description = "Trust0 SDP Service Proxy Gateway"
repository = "https://github.com/chewyfish/trust0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.76"
chrono = { version = "0.4.34", default-features = false, features = ["clock", "std"] }
clap = { version = "4.4.11", features = [ "derive", "env" ] }
ctrlc = "3.4.2"
diesel = { version = "2.1.4", optional = true }
derive_builder = "0.12.0"
dotenvy = "0.15.7"
futures = "*"
hex = "0.4.3"
hickory-resolver = "0.24.0"
iter-group = "0.2.0"
lazy_static = "1.4.0"
log = "0.4.20"
log4rs = "1.2.0"
once_cell = "1.19.0"
pki-types = { package = "rustls-pki-types", version = "1.0.1" }
rand = "0.8.5"
rcgen = { version = "0.11.3", features = ["pem"], default-features = false }
ring = "0.17.7"
rustls = { version = "0.22.1", features = [ "logging" ] }
scram = "0.6.0"
sct = "0.7"
serde = { version = "*", features = ["derive"] }
serde_derive = "*"
serde_json = { version = "*", features = ["arbitrary_precision"] }
shlex = "1.2.0"
time = { version = "0.3.34", default-features = false }
trust0-common = { version = "1.0.1", path = "../common" }
webpki-roots = "0.26.0"
x509-parser = "0.15.1"
regex = "1.10.2"

[dev-dependencies]
diesel_migrations = "2.1.0"
mockall = "0.12.1"
pg-embed = { git = "https://github.com/faokunega/pg-embed.git", branch = "master", default-features = false, features = [ "rt_tokio_migrate" ] }
serial_test = "3.0.0"
tokio-test = "0.4.3"

[features]
postgres_db = ["diesel/postgres"]
mysql_db = ["diesel/mysql", "diesel/chrono"]
