[package]
name = "trust0-gateway"
version = "1.1.0"
description = "Trust0 SDP Service Proxy Gateway"
repository = "https://github.com/chewyfish/trust0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5.53", features = [ "derive", "env" ] }
ctrlc = "3.5.1"
diesel = { version = "2.3.4", optional = true }
derive_builder = "0.20.2"
dotenvy = "0.15.7"
futures = "0.3.31"
hex = "0.4.3"
hickory-resolver = "0.24.4"
iter-group = "0.3.0"
lazy_static = "1.5.0"
log = "0.4.28"
log4rs = "1.4.0"
once_cell = "1.21.3"
pki-types = { package = "rustls-pki-types", version = "1.13.1" }
rand = "0.9.2"
rcgen = { version = "0.13.2", features = ["pem"], default-features = false }
regex = "1.12.2"
ring = "0.17.14"
rustls = { version = "0.23.35", features = ["logging", "prefer-post-quantum", "std", "tls12", "ring"], default-features = false }
scram = "0.6.0"
sct = "0.7.1"
serde = { version = "*", features = ["derive"] }
serde_derive = "*"
serde_json = { version = "*", features = ["arbitrary_precision"] }
shlex = "1.3.0"
time = { version = "0.3.44", default-features = false }
trust0-common = { version = "1.1.0", path = "../common" }
webpki-roots = "0.26.11"
x509-parser = "0.18.0"

[dev-dependencies]
diesel_migrations = "2.3.1"
mockall = "0.14.0"
pg-embed = { git = "https://github.com/faokunega/pg-embed.git", branch = "master", default-features = false, features = [ "rt_tokio_migrate" ] }
serial_test = "3.2.0"
tokio-test = "0.4.4"

[features]
postgres_db = ["diesel/postgres"]
mysql_db = ["diesel/mysql", "diesel/chrono"]
