[package]
name = "trust0-gateway"
version = "2.0.0-rc1"
description = "Trust0 SDP Service Proxy Gateway"
repository = "https://github.com/chewyfish/trust0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
clap = { version = "4.6.1", features = [ "derive", "env" ] }
ctrlc = "3.5.2"
diesel = { version = "2.3.8", optional = true }
derive_builder = "0.20.2"
dotenvy = "0.15.7"
futures = "0.3.32"
hex = "0.4.3"
hickory-resolver = "0.24.4"
iter-group = "0.3.0"
lazy_static = "1.5.0"
log = "0.4.29"
log4rs = "1.4.0"
once_cell = "1.21.4"
pki-types = { package = "rustls-pki-types", version = "1.14.1" }
rand = "0.10.1"
rcgen = { version = "0.14.7", features = ["pem"], default-features = false }
regex = "1.12.3"
ring = "0.17.14"
rustls = { version = "0.23.39", features = ["logging", "std", "tls12", "ring"], default-features = false }
scram = "0.6.0"
sct = "0.7.1"
serde = { version = "*", features = ["derive"] }
serde_derive = "*"
serde_json = { version = "*", features = ["arbitrary_precision"] }
shlex = "1.3.0"
time = { version = "0.3.47", default-features = false }
trust0-common = { version = "2.0.0-rc1", path = "../common" }
webpki-roots = "1.0.7"
x509-parser = "0.18.1"

[dev-dependencies]
diesel_migrations = "2.3.2"
mockall = "0.14.0"
pg-embed = { git = "https://github.com/faokunega/pg-embed.git", branch = "master", default-features = false, features = [ "rt_tokio_migrate" ] }
serial_test = "3.4.0"
tokio-test = "0.4.5"

[features]
postgres_db = ["diesel/postgres"]
mysql_db = ["diesel/mysql", "diesel/chrono"]
